visible default checkboxes on firefox fix

--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -65,6 +65,7 @@ input {
 }
 
 .submitButton {
+    visibility: visible;
     display: block;
     font-weight: bold;
     border-radius: 0.4vmin;
